               but now I am consolodating into this one place.
               Two changes to the file to treat the "sgi" platform like
               other 64-bit platforms.
               Remove this file from src/idlmangle, src/image, src/math,
               src/slatec, src/spheregroup, src/slatec.
include/Makefile: New directory for IDL<->C include file.
src/{idlmangle,image,math,slatec,spheregroup,trace}/Makefile: Changed the
               location of the include file to "../../include".
src/image/Makefile: Change some of the comment lines, since for some bizarre
               reason those comment lines that end in a backslash will crash
               on the SGI IRIX platform.
src/mangle1.4/src/Makefile: Simplify line 80 of the Makefile such that this
               will build on the SGI platform.  This meant stripping out the
               fancy bit of code that extracts the list of objects in
               the libmangle.a library.
src/trace/evilmath.c: Get rid of "sumf" variable which is unused.

-------------------------------------------------------------------------------
v4_10_8 (Jan 4, 2004)
Tagged for sirtf v0_0_2

GAUSS_OVERLAP: New function to calculate log integral, covariance, and
               mean of product of two gaussians.
NW_RGB_MAKE: Top-level routine for making color images from 3 color images.

bin/evilmake: Add "LDF77=g77" or "LDF77=ld", and export it.
scr/idlmangle/Makefile: Change of $(FC) -> $(LDF77) on link line, so
               that this builds on a Mac where "ld" is used instead
               of "g77" for linking.
src/mangle1.4/src/garea.s.f: Bug fix to send errors to stderr.  We had errors
               like "*** from garea: total failure at tol =  3.33161425"
               spilling into the output stream from the Fortran code back
               into IDL, which was corrupting the data.  (Blanton thinks
               this is triggered from balkans with zero area.)
