@@ -24,7 +24,7 @@ OBJECTS = \
 
 all : $(LIB)/libidlmangle.$(SO_EXT) 
 
-$(LIB)/libidlmangle.$(SO_EXT): $(OBJECTS) $(IDLUTILS_DIR)/lib/libmangle.a
+$(LIB)/libidlmangle.$(SO_EXT): $(OBJECTS) $(IDLUTILS_DIR)/lib/libmangle.$(SO_EXT)
 	$(LDF77) $(X_LD_FLAGS) -o $(LIB)/libidlmangle.$(SO_EXT) $(OBJECTS) \
 		-lmangle -L$(IDLUTILS_DIR)/lib
 
