@@ -16,6 +16,10 @@ include/export.h: This include file used to exist in six places under /src,
                Remove this file from src/idlmangle, src/image, src/math,
                src/slatec, src/spheregroup, src/slatec.
 include/Makefile: New directory for IDL<->C include file.
+src/{idlmangle,mangle1.4/src}/Makefile: Change the instances of "libmangle.a"
+               with "libmangle.$(SO_EXT)" so that we get ".a" extensions
+               on some platforms, and ".so" extensions on others.  This is
+               how our other built libraries work.
 src/{idlmangle,image,math,slatec,spheregroup,trace}/Makefile: Changed the
                location of the include file to "../../include".
 src/image/Makefile: Change some of the comment lines, since for some bizarre
